--- a/languages/list-all-posts-by-ACT-fr_FR.po
+++ b/languages/list-all-posts-by-ACT-fr_FR.po
@@ -11,7 +11,7 @@ msgstr ""
 "X-Generator: Poedit 1.7.1\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Poedit-KeywordsList: __(;_e\n"
+"X-Poedit-KeywordsList: __;_e\n"
 "Language: fr\n"
 "X-Poedit-SearchPath-0: ..\n"
 "X-Poedit-SearchPath-1: ../include\n"
