--- a/languages/list-all-posts-by-ACT-it_IT.po
+++ b/languages/list-all-posts-by-ACT-it_IT.po
@@ -1,33 +1,163 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: list-all-files-by-ACT\n"
-"POT-Creation-Date: 2014-12-28 14:00+0100\n"
-"PO-Revision-Date: 2014-12-28 14:01+0100\n"
+"POT-Creation-Date: 2015-03-05 12:09+0100\n"
+"PO-Revision-Date: 2015-03-05 12:12+0100\n"
 "Last-Translator: Fabio Marzocca <marzoccafabio@gmail.com>\n"
 "Language-Team: \n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.7.1\n"
+"X-Generator: Poedit 1.7.4\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-KeywordsList: __(;_e\n"
+"X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: ..\n"
 "X-Poedit-SearchPath-1: ../include\n"
 
-#: ../include/ACT-displayer.php:20
+#: ../include/ACT-admin.php:16
+msgid "Automatic shortcode generator"
+msgstr "Generatore automatico di Shortcode"
+
+#: ../include/ACT-admin.php:23
+msgid "Select what list(s) to show:"
+msgstr "Seleziona quale lista(e) visualizzare"
+
+#: ../include/ACT-admin.php:26
+msgid "Categories"
+msgstr "Categorie"
+
+#: ../include/ACT-admin.php:28
+msgid "Authors"
+msgstr "Autori"
+
+#: ../include/ACT-admin.php:30
+msgid "Titles"
+msgstr "Titoli"
+
+#: ../include/ACT-admin.php:32
+msgid ""
+"Selecting more than one choice will include a selector dropdown box in your "
+"page."
+msgstr ""
+"Selezionando più di una scelta, un selettore dropdown verrà visualizzato "
+"nella pagina."
+
+#: ../include/ACT-admin.php:34
+msgid "Is this a single user site?"
+msgstr "È questo un sito singolo utente?"
+
+#: ../include/ACT-admin.php:37 ../include/ACT-admin.php:44
+msgid "Yes"
+msgstr "Sì"
+
+#: ../include/ACT-admin.php:39
+msgid ""
+"This option is for websites with a single author. It removes grouping by "
+"Authors and any author name in the list."
+msgstr ""
+"Questa opzione è per siti con singolo autore. La lista Autori viene rimossa."
+
+#: ../include/ACT-admin.php:41
+msgid "Include admin's posts?"
+msgstr "Includi gli articoli dell'amministratore?"
+
+#: ../include/ACT-admin.php:49
+msgid "Limit number of posts to max:"
+msgstr "Limita il numero di articoli a max:"
+
+#: ../include/ACT-admin.php:50
+msgid ""
+"Limit the number of posts in the lists, including only<br /> a certain "
+"number of the most recent posts.<br />This is achieved separately for the 3 "
+"lists."
+msgstr ""
+"Limita il numero di articoli nella lista, includendo solo<br /> un certo "
+"numero di articoli recenti.<br />La configurazione può essere diversa per "
+"ogni lista."
+
+#: ../include/ACT-admin.php:52
+msgid "Categories (0 means no limit)"
+msgstr "Categorie (0 significa nessun limite)"
+
+#: ../include/ACT-admin.php:55
+msgid ""
+"Limit the Categories list to only the \"x\" most recent for every category."
+msgstr "Limita la lista Categorie agli \"x\" articoli più recenti."
+
+#: ../include/ACT-admin.php:57
+msgid "Authors (0 means no limit)"
+msgstr "Autori (0 significa nessun limite)"
+
+#: ../include/ACT-admin.php:60
+msgid "Limit the Authors list to only the \"x\" most recent for every author."
+msgstr "Limita la lista Autori agli \"x\" articoli più recenti."
+
+#: ../include/ACT-admin.php:62
+msgid "Titles (0 means no limit)"
+msgstr "Titoli (0 significa nessun limite)"
+
+#: ../include/ACT-admin.php:65
+msgid "Limit the Titles list to only the \"x\" most recent ones."
+msgstr "Limita la lista Titoli agli \"x\" articoli più recenti."
+
+#: ../include/ACT-admin.php:71
+msgid ""
+"Categories to be EXCLUDED <br />(posts in selected Categories won't be "
+"listed)"
+msgstr ""
+"Categorie da ESCLUDERE<br />(gli articoli nelle categorie selezionate non "
+"verranno visualizzati)"
+
+#: ../include/ACT-admin.php:76
+msgid "Exclude posts from selected Categories"
+msgstr "Escludi articoli dalle categorie selezionate."
+
+#: ../include/ACT-admin.php:83
+msgid "Generate Shortcode"
+msgstr "Genera lo Shortcode"
+
+#: ../include/ACT-admin.php:193
+msgid "This is your shortcode:"
+msgstr "Questo è il tuo shortcode:"
+
+#: ../include/ACT-admin.php:196
+msgid "Copy & Paste it into your page"
+msgstr "Copia e incolla la stringa nella tua pagina"
+
+#: ../include/ACT-displayer.php:28
 msgid "Group by:"
 msgstr "Visualizza per:"
 
-#: ../include/ACT-displayer.php:22
+#: ../include/ACT-displayer.php:31
 msgid "Author"
 msgstr "Autore"
 
-#: ../include/ACT-displayer.php:23
+#: ../include/ACT-displayer.php:34
 msgid "Title"
 msgstr "Titolo"
 
-#: ../include/ACT-displayer.php:24
+#: ../include/ACT-displayer.php:37
 msgid "Category"
 msgstr "Sezione"
+
+#: ../list-all-posts-by-ACT.php:84
+msgid "You must select at least one list to show!"
+msgstr "Deve selezionare almeno una lista da visualizzare!"
+
+#: ../list-all-posts-by-ACT.php:85
+msgid ""
+"The shortcode has been generated. You'll find it at the bottom of this page."
+msgstr "Lo Shortcode è stato generato. Lo troverai in fondo a questa pagina."
+
+#: ../list-all-posts-by-ACT.php:102 ../list-all-posts-by-ACT.php:103
+msgid "ACT List Shortcodes"
+msgstr "ACT List Shorticodes"
+
+#~ msgid ""
+#~ "Categories to be EXCLUDED <br />(posts in selected Categories won't be "
+#~ "listed) "
+#~ msgstr ""
+#~ "Categorie da ESCLUDERE<br />(gli articoli nelle Categorie selezionate non "
+#~ "verranno elencati)"
