--- a/languages/list-all-posts-by-ACT-nl_NL.po
+++ b/languages/list-all-posts-by-ACT-nl_NL.po
@@ -1,11 +1,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: list-all-files-by-ACT\n"
-"POT-Creation-Date: 2015-03-05 12:09+0100\n"
-"PO-Revision-Date: 2015-03-05 14:18+0100\n"
-"Last-Translator: Fabio Marzocca <marzoccafabio@gmail.com>\n"
-"Language-Team: \n"
-"Language: it\n"
+"POT-Creation-Date: 2015-03-05 11:45+0100\n"
+"PO-Revision-Date: 2015-03-05 14:44+0100\n"
+"Last-Translator: Rolf van Gelder <info@cagewebdev.com>\n"
+"Language-Team: CAGE | Rolf van Gelder <info@cagewebdev.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,59 +12,59 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-KeywordsList: __;_e\n"
+"Language: nl_NL\n"
 "X-Poedit-SearchPath-0: ..\n"
 "X-Poedit-SearchPath-1: ../include\n"
 
 #: ../include/ACT-admin.php:16
 msgid "Automatic shortcode generator"
-msgstr "Generatore automatico di Shortcode"
+msgstr "Automatische shortcode generator"
 
 #: ../include/ACT-admin.php:23
 msgid "Select what list(s) to show:"
-msgstr "Seleziona quale lista(e) visualizzare"
+msgstr "Selecteer welke lijst(en) getoond moeten worden:"
 
 #: ../include/ACT-admin.php:26
 msgid "Categories"
-msgstr "Categorie"
+msgstr "Categorieën"
 
 #: ../include/ACT-admin.php:28
 msgid "Authors"
-msgstr "Autori"
+msgstr "Auteurs"
 
 #: ../include/ACT-admin.php:30
 msgid "Titles"
-msgstr "Titoli"
+msgstr "Titels"
 
 #: ../include/ACT-admin.php:32
 msgid ""
 "Selecting more than one choice will include a selector dropdown box in your "
 "page."
-msgstr ""
-"Selezionando più di una scelta, un selettore dropdown verrà visualizzato "
-"nella pagina."
+msgstr "Als je er meer dan één kiest verschijnt er een dropdown op je pagina."
 
 #: ../include/ACT-admin.php:34
 msgid "Is this a single user site?"
-msgstr "È questo un sito singolo utente?"
+msgstr "Heeft deze site slechts één auteur?"
 
 #: ../include/ACT-admin.php:37 ../include/ACT-admin.php:44
 msgid "Yes"
-msgstr "Sì"
+msgstr "Ja"
 
 #: ../include/ACT-admin.php:39
 msgid ""
 "This option is for websites with a single author. It removes grouping by "
 "Authors and any author name in the list."
 msgstr ""
-"Questa opzione è per siti con singolo autore. La lista Autori viene rimossa."
+"Deze optie is voor websites met slechts één auteur. Het verwijdert "
+"groepering op Auteurs en alle auteurnamen in de lijst."
 
 #: ../include/ACT-admin.php:41
 msgid "Include admin's posts?"
-msgstr "Includi gli articoli dell'amministratore?"
+msgstr "Ook Admin berichten tonen?"
 
 #: ../include/ACT-admin.php:49
 msgid "Limit number of posts to max:"
-msgstr "Limita il numero di articoli a max:"
+msgstr "Limiteer het aantal berichten tot maximaal:"
 
 #: ../include/ACT-admin.php:50
 msgid ""
@@ -73,91 +72,84 @@ msgid ""
 "number of the most recent posts.<br />This is achieved separately for the 3 "
 "lists."
 msgstr ""
-"Limita il numero di articoli nella lista, includendo solo<br /> un certo "
-"numero di articoli recenti.<br />La configurazione può essere diversa per "
-"ogni lista."
+"Limiteer het aantal berichten in de lijsten, met alleen<br />een bepaald "
+"aantal recente berichten.<br />Dit is gescheiden voor alle 3 lijsten."
 
 #: ../include/ACT-admin.php:52
 msgid "Categories (0 means no limit)"
-msgstr "Categorie (0 significa nessun limite)"
+msgstr "Categorieën (0 betekent geen limiet)"
 
 #: ../include/ACT-admin.php:55
 msgid ""
 "Limit the Categories list to only the \"x\" most recent for every category."
-msgstr "Limita la lista Categorie agli \"x\" articoli più recenti."
+msgstr "Limiteer de categorieënlijst tot alleen de \"x\" meest recente."
 
 #: ../include/ACT-admin.php:57
 msgid "Authors (0 means no limit)"
-msgstr "Autori (0 significa nessun limite)"
+msgstr "Auteurs (0 betekent geen limiet)"
 
 #: ../include/ACT-admin.php:60
 msgid "Limit the Authors list to only the \"x\" most recent for every author."
-msgstr "Limita la lista Autori agli \"x\" articoli più recenti."
+msgstr "Limiteer de auteurslijst tot alleen de \"x\" meest recente."
 
 #: ../include/ACT-admin.php:62
 msgid "Titles (0 means no limit)"
-msgstr "Titoli (0 significa nessun limite)"
+msgstr "Titels (0 betekent geen limiet)"
 
 #: ../include/ACT-admin.php:65
 msgid "Limit the Titles list to only the \"x\" most recent ones."
-msgstr "Limita la lista Titoli agli \"x\" articoli più recenti."
+msgstr "Limiteer de titelslijst tot alleen de \"x\" meest recente."
 
 #: ../include/ACT-admin.php:71
 msgid ""
 "Categories to be EXCLUDED <br />(posts in selected Categories won't be "
-"listed)"
+"listed) "
 msgstr ""
-"Categorie da ESCLUDERE<br />(gli articoli nelle categorie selezionate non "
-"verranno visualizzati)"
+"Categorieën om UIT TE SLUITEN<br />(berichten in geselecteerde Categorieën "
+"worden niet getoond)"
 
 #: ../include/ACT-admin.php:76
 msgid "Exclude posts from selected Categories"
-msgstr "Escludi articoli dalle categorie selezionate."
+msgstr "Sluit berichten van de geselecteerde Categorieën uit"
 
 #: ../include/ACT-admin.php:83
 msgid "Generate Shortcode"
-msgstr "Genera lo Shortcode"
+msgstr "Genereer shortcode"
 
 #: ../include/ACT-admin.php:193
 msgid "This is your shortcode:"
-msgstr "Questo è il tuo shortcode:"
+msgstr "Dit is jouw shortcode:"
 
 #: ../include/ACT-admin.php:196
 msgid "Copy & Paste it into your page"
-msgstr "Copia e incolla la stringa nella tua pagina"
+msgstr "Kopieëer & plak het in je pagina"
 
 #: ../include/ACT-displayer.php:28
 msgid "Group by:"
-msgstr "Visualizza per:"
+msgstr "Gegroepeerd op:"
 
 #: ../include/ACT-displayer.php:31
 msgid "Author"
-msgstr "Autore"
+msgstr "Auteur"
 
 #: ../include/ACT-displayer.php:34
 msgid "Title"
-msgstr "Titolo"
+msgstr "Titel"
 
 #: ../include/ACT-displayer.php:37
 msgid "Category"
-msgstr "Sezione"
+msgstr "Categorie"
 
 #: ../list-all-posts-by-ACT.php:84
 msgid "You must select at least one list to show!"
-msgstr "Deve selezionare almeno una lista da visualizzare!"
+msgstr "Je moet minstens één lijst selecteren om te tonen!"
 
 #: ../list-all-posts-by-ACT.php:85
 msgid ""
 "The shortcode has been generated. You'll find it at the bottom of this page."
-msgstr "Lo Shortcode è stato generato. Lo troverai in fondo a questa pagina."
+msgstr ""
+"De shortcode is gegenereerd. Je vindt hem aan  het einde van deze pagina."
 
 #: ../list-all-posts-by-ACT.php:102 ../list-all-posts-by-ACT.php:103
 msgid "ACT List Shortcodes"
 msgstr "ACT List Shortcodes"
-
-#~ msgid ""
-#~ "Categories to be EXCLUDED <br />(posts in selected Categories won't be "
-#~ "listed) "
-#~ msgstr ""
-#~ "Categorie da ESCLUDERE<br />(gli articoli nelle Categorie selezionate non "
-#~ "verranno elencati)"
